# compass_ai

./: .gitignore  AGENTIC_ROADMAP_IMPLEMENTATION.md  AGENTIC_TESTING_GUIDE.md  ALTERNATIVE_LAYOUTS.md  ALTERNATIVE_LAYOUTS_SCOPED.md  ANTIGRAVITY_SETUP.md  CENTERED_CAROUSEL_WITH_FOCUS_MODE.md  CLAUDE.md  COGNITIVE_PROFILE_MAPPING.md  DEBUGGING_ONBOARDING_ISSUE.md  FRESH_REDESIGN_ANALYSIS.md  FRONTEND_MIGRATION_PHASE_1_SUMMARY.md  HARDCODED_EXPECTATIONS_AUDIT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  NEXTJS_15_CHANGES.md  PENDING_FRONTEND_UPDATES.md  PERSONALIZATION_COMPLETE.md  PERSONALIZATION_IMPROVEMENTS_COMPLETE.md  PERSONALIZATION_STATUS.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_5.1_FOUNDATION_COMPLETE.md  PHASE_5_EDITABLE_ROADMAP_PLAN.md  QUICK_START.md  README.md  REDESIGN_REEVALUATION.md  SESSION_2_SUMMARY.md  STREAMING_ENGAGEMENT_STRATEGY.md  UI redesign prompt.md  bugs.md  cleanup_recommendations.md  design_audit_roadmap_viewer.md  design_redesign_prompt.md  docker-compose.yml  options.md  package-lock.json  package.json  portfolio_app_prompt.md  tailwind.config.ts
backend/: .gitignore  API_KEYS_SETUP.md  BACKEND_TEST_REPORT.md  Dockerfile  PERSONALIZATION_TEST_REPORT.md  README.md  pyproject.toml  test_continue.json  test_interview.py
backend/app/: main.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/backend_venv/: pyvenv.cfg
backend/scripts/: add_user_notes_column.py  fix_edit_history.py  fix_edit_history_type.sql  seed_repository.py  test_ssl.py
backend/tests/: __init__.py  conftest.py  test_personalization.py
(+703 files in other folders)
